Update menu data and fix price layout to keep price visible

--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@ header {
 }
 
 .subtitle {
-  color: #f5ba18; /* wine red */
-  font-weight: 600;
+  color: #c99c21;  /* wine red */
+  font-weight: 700;
   letter-spacing: 0.15em;
   text-transform: uppercase;
   font-size: 1.1rem;
@@ -48,8 +48,8 @@ header {
 
 .category-title {
   font-size: 1.5rem;
-  color: #f5ba18; /* wine red */
-   /* taupe divider */
+  color: #c99c21; 
+  font-weight: 800;
    margin: 0;
    padding-top: 1.1em;
   padding-bottom: .6em;
@@ -90,6 +90,6 @@ header {
 .dish-description {
   font-size: 0.9rem;
   margin-top: 0.2rem;
-  color: #f0d5a8;
+  color: #FFFAFA ; 
   font-weight: 200;
 }
